--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ repositories {
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.google.firebase.udacity.friendlychat"
@@ -42,7 +42,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
 
     // Firebase
-    compile 'com.google.firebase:firebase-database:9.6.0'
+    compile 'com.google.firebase:firebase-database:9.6.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
