--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,15 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
 
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    implementation 'com.android.support:design:24.2.0'
+    implementation 'com.android.support:appcompat-v7:24.2.0'
 
     // Displaying images
-    compile 'com.github.bumptech.glide:glide:3.6.1'
+    implementation 'com.github.bumptech.glide:glide:3.6.1'
+
+    // Firebase Realtime Database
+    implementation 'com.google.firebase:firebase-database:9.0.1'
 }
